Default to map-based requests; Fix reflection warnings